<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>follow_ahead_rl</name>
 <version>0.0.1</version>
 <description>TODO: Package description</description>
 <maintainer email="payam222@gmail.com">user</maintainer>
 <license>Apache License 2.0</license>

 <buildtool_depend>ament_cmake</buildtool_depend>
 <build_depend>launch_ros</build_depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>
 <exec_depend>rclcpp</exec_depend>
 <exec_depend>std_msgs</exec_depend>
 <exec_depend>launch_ros</exec_depend>
 <exec_depend>gazebo_msgs</exec_depend>
 <test_depend>launch</test_depend>

 <build_depend>gazebo_msgs</build_depend>
 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>
